welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:9: error: ';' expected but 'else' found.
	else if (!isMorning) {
        ^answerCell:15: error: Unmatched closing brace '}' ignored here
 }
 ^